[gd_scene load_steps=9 format=3 uid="uid://b0qabt4ueiah1"]

[ext_resource type="Script" path="res://Scripts/power_generator_container.gd" id="1_ilws4"]
[ext_resource type="PackedScene" uid="uid://cjf1d6fsmpbq" path="res://Scenes/power_generator.tscn" id="2_cwhru"]
[ext_resource type="Texture2D" uid="uid://xpwtesvn0ck0" path="res://2D Sprites/gameplay switch to machine button.png" id="3_1dk1p"]
[ext_resource type="Texture2D" uid="uid://dojrt2id5umyl" path="res://2D Sprites/Player & Items Sprites/Power Generator Panel Green Animation.png" id="5_ups1f"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_we8se"]
light_mode = 1

[sub_resource type="Animation" id="Animation_tlbm4"]
resource_name = "Power Generator Lift"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Power Generator Sprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.5),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Power Generator Sprites:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2),
"update": 1,
"values": [Vector2i(2, 1), Vector2i(1, 1), Vector2i(0, 1), Vector2i(2, 0), Vector2i(1, 0), Vector2i(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../House/Distortion & Blur:material:shader_parameter/blur_amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.15]
}

[sub_resource type="Animation" id="Animation_ebd88"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Power Generator Sprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Power Generator Sprites:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../House/Distortion & Blur:material:shader_parameter/blur_amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o1oaj"]
_data = {
"Power Generator Lift": SubResource("Animation_tlbm4"),
"RESET": SubResource("Animation_ebd88")
}

[node name="Power Generator Container" type="Node2D" node_paths=PackedStringArray("generator_button", "power_generator", "power_generator_animation_player", "power_generator_sprites")]
script = ExtResource("1_ilws4")
generator_button = NodePath("GeneratorTextureButton")
power_generator = NodePath("Power Generator")
power_generator_animation_player = NodePath("Power Generator AnimationPlayer")
power_generator_sprites = NodePath("Power Generator Sprites")

[node name="Power Generator" parent="." instance=ExtResource("2_cwhru")]

[node name="Power Generator Sprites" type="Sprite2D" parent="."]
texture = ExtResource("5_ups1f")
hframes = 3
vframes = 2
frame = 5

[node name="GeneratorTextureButton" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.4)
material = SubResource("CanvasItemMaterial_we8se")
offset_left = -95.0
offset_top = 72.0
offset_right = 95.0
offset_bottom = 90.0
button_mask = 3
texture_normal = ExtResource("3_1dk1p")

[node name="Power Generator AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o1oaj")
}

[connection signal="mouse_entered" from="GeneratorTextureButton" to="." method="_on_generator_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="GeneratorTextureButton" to="." method="_on_generator_texture_button_mouse_exited"]
[connection signal="pressed" from="GeneratorTextureButton" to="." method="_on_generator_texture_button_pressed"]
[connection signal="animation_finished" from="Power Generator AnimationPlayer" to="." method="_on_power_generator_animation_player_animation_finished"]
